0.05
 - Improve LICENSE AND COPYRIGHT section in doc.
 - Improve SEE ALSO section in doc.
 - Remove diacritics from author name in Makefile.PL.
 - Update Module::Install to 1.16 version.
 - Update copyright years.

0.04 2014-10-02T06:42:02+02:00
 - Add tests.
 - Fix LICENSE file.
 - Update Module::Install to 1.12 version.

0.03 2013-11-13
 - Add 'readme_from' directive to Makefile.PL.
 - Add minimal Perl version.
 - Add some tests.

0.02 2013-09-21
 - Rewrite Changes file to CPAN::Changes::SPEC format.

0.01 2013-09-19
 - First version.